--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -9,8 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo a string
-        run: echo "hello world from github actions"
+        run: eccho "hello world from github actions"
       - name: multiline script
         run: |
           node -v
           npm -v
+  # for debbuging: https://docs.github.com/en/actions/configuring-and-managing-workflows/managing-a-workflow-run#enabling-debug-logging
+  # enabling or adding these secrets with true value: ACTIONS_RUNNER_DEBUG & ACTIONS_STEP_DEBUG on settings repo
+  
