--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -11,7 +11,7 @@ jobs:
       # for debbuging: https://docs.github.com/en/actions/configuring-and-managing-workflows/managing-a-workflow-run#enabling-debug-logging
       # enabling or adding these secrets with true value: ACTIONS_RUNNER_DEBUG & ACTIONS_STEP_DEBUG on settings repo
       - name: echo a string
-        run: eccho "hello world from github actions"
+        run: echo "hello world from github actions"
       - name: multiline script
         run: |
           node -v
@@ -21,4 +21,3 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
-        
