--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -21,3 +21,13 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
+  # second job
+  run-windows-commands:
+    runs-on: windows-latest
+    steps:
+      - name: Directory Powershell
+        run: Get-Location
+      - name: Directory Bash
+        run: pwd
+        shell: bash
+        
