First workflow: executing commands on windows shell in new job and add needs property

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -24,10 +24,11 @@ jobs:
   # second job
   run-windows-commands:
     runs-on: windows-latest
+    needs: ["run-shell-commands"]
     steps:
       - name: Directory Powershell
         run: Get-Location
       - name: Directory Bash
         run: pwd
         shell: bash
-        
+
