--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,8 @@ jobs:
         run: |
           pwd
           ls -al
+      - name: Checkout Action
+        uses: actions/checkout@v2
       - name: Simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1
