--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,6 +12,10 @@ jobs:
           ls -al
       - name: Checkout Action
         uses: actions/checkout@v2
+      - name: List files after checkout
+        run: |
+          pwd
+          ls -al
       - name: Simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1
