--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,9 @@
 name: "Actions WorkFlow"
 
-on: 
-  push:
+on:
+  schedule:
+    - cron: "*/5 * * * *"
+  #push:
   pull_request:
     types:
       - closed
