Actions workflow: Add schedule execution at every 5 min

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: "Actions WorkFlow"
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "0/5 * * * *"
   #push:
   pull_request:
     types:
