--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,15 +1,23 @@
 name: "Actions WorkFlow"
 
 on:
-  schedule:
-    - cron: "0/5 * * * *"
+  push:
+    branches:
+      - master
+      - 'feature/*' # matches feature/fetaA, feature/fetaB, does not match feature/feta/A
+      - 'feature/**'
+      - '!feature/fetaC' #ignoring this branch
+    tags:
+      - v1.*
+    paths:
+      - '**.js'
   #push:
-  pull_request:
-    types:
-      - closed
-      - assigned
-      - opened
-      - reopened
+  # pull_request:
+  #   types:
+  #     - closed
+  #     - assigned
+  #     - opened
+  #     - reopened
 
 jobs:
   run-github-actions:
