--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,6 +9,24 @@ jobs:
   create_commit:
       runs-on: ubuntu-latest
       steps:
+      - name: Push a random file
+        run: |
+          pwd
+          ls -al
+          git init
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+          git config --global user.email "my-bot-worker@bot.com"
+          git config --global user.name "my-bot-worker"
+          git fetch
+          git checkout develop
+          git branch --set-upstream-to=origin/develop
+          git pull
+          ls -al
+          echo $RANDOM >> random.txt
+          ls -al
+          git add -A
+          git commit -m"Random file"
+          git push
       - name: Create issue using REST API
         run: |
           curl --request POST \
