--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -3,6 +3,18 @@ name: Context
 on: push
 
 jobs:
+  functions:
+    runs-on: ubuntu-latest
+    steps:
+      - name: dump
+        run: |
+          echo ${{ contains(github.event.issue.labels.*.name, 'bug') }}
+          echo ${{ contains('Hello world', 'llo') }}
+          echo ${{ startsWith('Hello world', 'He') }}
+          echo ${{ endsWith('Hello world', 'ld') }}
+          echo ${{ format('Hello {0} {1} {2}', 'Mona', 'the', 'Octocat') }}
+          echo ${{ format('{{Hello {0} {1} {2}!}}', 'Mona', 'the', 'Octocat') }}
+          echo ${{ join(github.event.issue.labels.*.name, ', ') }}
   one:
     runs-on: ubuntu-16.04
     steps:
