--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -1,6 +1,6 @@
 name: Context
 
-on: push
+on: [push, pull_request]
 
 jobs:
   functions:
@@ -17,12 +17,14 @@ jobs:
           echo ${{ join(github.event.issue.labels.*.name, ', ') }}
   one:
     runs-on: ubuntu-16.04
+    if: github.event_name == 'push'
     steps:
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
+        run: eccho "$GITHUB_CONTEXT"
       - name: Dump job context
+        if: failure()
         env:
           JOB_CONTEXT: ${{ toJson(job) }}
         run: echo "$JOB_CONTEXT"
@@ -31,6 +33,7 @@ jobs:
           STEPS_CONTEXT: ${{ toJson(steps) }}
         run: echo "$STEPS_CONTEXT"
       - name: Dump runner context
+        if: always()
         env:
           RUNNER_CONTEXT: ${{ toJson(runner) }}
         run: echo "$RUNNER_CONTEXT"
