--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest]
-        node_version: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
+        node_version: [4, 5, 6, 7, 8, 9, 10, 11]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Log node version
