--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -9,11 +9,11 @@ jobs:
         os: [ ubuntu-latest, macos-latest, windows-latest]
         node_version: [5, 6, 7, 8, 9, 10, 11]
         include:
-          - os: ububuntu-latest
+          - os: ubuntu-latest
             node_version: 8
             is_ubuntu_and_node_8: "true"
         exclude:
-          - os: ububuntu-latest
+          - os: ubuntu-latest
             node_version: 6
           - os: macos-latest
             node_version: 8
